# ifa

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  RADIOCACHE_FIX_PROMPT.md  README.md  agents.md  ifa_chat.py  ifa_web.py  migrate_radio_cache.sh  pension_drawdown_simulator.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs-sync.yml
docs/: ARCHITECTURE.md  DEPENDENCIES.md  START_HERE.md
ifa/: __init__.py  config.py  engine.py  events.py  explain.py  market.py  metrics.py  models.py  plotting.py  presets.py  simulation.py  strategies.py  url_presets.py
ifa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
radio_cache/: bbc_feed_parser.py  cache_db.py  search.py
saved_parameters/: Couple.json  Couple_1.json  Couple_3.json  Couple_5.json  Couple_cashflow_Ed1.json  Couple_cashflow_Ed11.json  Couple_cashflow_Ed3.json  Couple_cashflow_Ed31.json  Couple_cashflow_Ed5.json  Couple_cashflow_Ed51.json  Ed1a.json  Ed1b.json  Mich_events.json  Michael_basic.json  Michael_big_spender.json  Michael_lowstatepension.json  Michael_redux.json  My_new_params.json  Named_Inputs_Smoke.json  Preset_2026-03-10_15-13.json  Reliability_Smoke.json  UI_Rename_Smoke.json  UI_Save_Smoke.json  UI_Save_Smoke_2.json  my_latest.json
templates/radio_cache/: base.html
tests/: test_engine.py  test_events.py  test_explain.py  test_ifa_web.py  test_plotting.py  test_presets.py  test_radio_feed_parser.py  test_url_presets.py
